fixes page width (horizontal scroll) issue

--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ header {
 	background: #111;
 	width: 100%;
 	height: 2.2rem;
-	padding: .3rem 1.25rem;
+	padding: .3rem 0;
 	position: absolute;
 	z-index: 1000;
 	left: 0;
@@ -100,7 +100,7 @@ button#nav-drawer-open {
 
 	nav.header {
 		height: 60%;
-		width: 100%;
+		width: 50%;
 		display: inline-block;
 		margin: 0 0 0 20px;
 		padding: .1rem;
